vehicle/tests/golden/error/argument/missingVerifier/spec.vcl
@property
trivial : Bool
trivial = True
